--- a/Desinger.css
+++ b/Desinger.css
@@ -35,8 +35,19 @@
 .box-3{
     position: absolute ;
    background-color: rgb(10, 38, 124);
-   border-radius: 5px 5%;
+   border-radius: 10% 5px;
      top: 165%;
      font-size: 500%;
    left: 40rem;
 }
+.box-4{
+    position: absolute;
+    background-color: rgb(0, 255, 255);
+    top: 175%;
+    left: 45rem;
+    font-size: 200%;
+}
+ .box-5 div{
+     font-size: 100px;
+     color: #0f7272; 
+ }
